k8s/admin-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-svc
spec:
  selector:
    matchLabels:
      app: admin-svc
  template:
    metadata:
      labels:
        app: admin-svc
    spec:
      containers:
      - name: admin-svc
        image: arigatory/moviepoisk-admin
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: admin-clusterip
spec:
  type: ClusterIP
  selector:
    app: admin-svc
  ports:
  - port: 80
    targetPort: 8000
