k8s/auth-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-svc
spec:
  selector:
    matchLabels:
      app: auth-svc
  template:
    metadata:
      labels:
        app: auth-svc
    spec:
      containers:
        - name: auth-svc
          image: arigatory/moviepoisk-auth
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-clusterip
spec:
  type: ClusterIP
  selector:
    app: auth-svc
  ports:
    - port: 8000
      targetPort: 8000
