k8s/httpbin-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin-svc
spec:
  selector:
    matchLabels:
      app: httpbin-svc
  template:
    metadata:
      labels:
        app: httpbin-svc
    spec:
      containers:
        - name: httpbin-svc
          image: kennethreitz/httpbin
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin-clusterip
spec:
  type: ClusterIP
  selector:
    app: httpbin-svc
  ports:
    - port: 80
      targetPort: 80
