k8s/ingress-svc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  labels:
    name: ingress-svc
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - httpbin.moviepoisk.ru
        - auth.moviepoisk.ru
        - admin.moviepoisk.ru
      secretName: moviepoisk-tls
  rules:
    - host: httpbin.moviepoisk.ru
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: httpbin-clusterip
                port:
                  number: 80
    - host: auth.moviepoisk.ru
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: auth-clusterip
                port:
                  number: 8000
    - host: admin.moviepoisk.ru
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: admin-clusterip
                port:
                  number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jaeger-ingress
  namespace: observability
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - jaeger.moviepoisk.ru
      secretName: moviepoisk-tls
  rules:
    - host: jaeger.moviepoisk.ru
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: my-jaeger-query
                port:
                  number: 16686
