k8s/elasticsearch-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: elasticsearch-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      elasticsearch.k8s.elastic.co/cluster-name: quickstart
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 9200
  egress:
  - to:
    - podSelector: {}
    ports:
    - protocol: TCP
      port: 9300
